<?xml version="1.0" encoding="utf-8"?>
<!--
    This XML file represents a menu layout for a navigation drawer.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <!-- Group with single checkable behavior -->
    <group android:checkableBehavior="single">

        <!-- Home item -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <!-- Rank item -->
        <item
            android:id="@+id/nav_rank"
            android:icon="@drawable/ic_menu_rank"
            android:title="@string/menu_rank" />

        <!-- Settings item -->
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

        <!-- Sign out item -->
        <item
            android:id="@+id/nav_sign_out"
            android:title="@string/sign_out" />

    </group>
</menu>
