<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Settings"
        android:textColor="#029300"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonSettingsBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="18dp"
        android:layout_marginTop="17dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="234dp"
        android:layout_height="37dp"
        android:layout_marginTop="228dp"
        android:text="@string/dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="179dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toStartOf="@+id/textViewChange2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <TextView
        android:id="@+id/textViewChange2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputEditText"
        app:layout_constraintTop_toBottomOf="@id/switch1" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText2"
        android:layout_width="179dp"
        android:layout_height="39dp"
        android:layout_marginTop="108dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toStartOf="@+id/textViewChange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switch1" />

    <TextView
        android:id="@+id/textViewChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/changeDataView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputEditText2"
        app:layout_constraintTop_toBottomOf="@id/switch1" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="104dp"
        android:layout_height="104dp"
        app:layout_constraintTop_toBottomOf="@id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        tools:layout_editor_absoluteX="142dp"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@id/imageView13"
        app:srcCompat="@drawable/baseline_camera_alt_24" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView13"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        android:layout_marginStart="20dp"
        tools:layout_editor_absoluteY="438dp"
        app:srcCompat="@drawable/baseline_image_search_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
